@@ -42,8 +42,8 @@ import org.springframework.data.domain.Sort;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
@@ -106,7 +106,7 @@ public final class VocabularyUtils
 	public static VersionDTO getVersionByLangVersion( VocabularyDTO vocabularyDTO, String language, String versionNumber )
 	{
 		return vocabularyDTO.getVersions().stream()
-				.filter( v -> v.getLanguage().equals( language ) && v.getNumber().equals( versionNumber ) )
+				.filter( v -> v.getLanguage().equals( language ) && v.getNumber().equals( VersionNumber.fromString( versionNumber ) ) )
 				.findFirst().orElse( null );
 	}
 
@@ -155,15 +155,8 @@ public final class VocabularyUtils
 
 	public static void prepareActiveFilters( String f, EsQueryResultDetail esq, SearchScope searchScope )
 	{
-		try
-		{
-			f = URLDecoder.decode( f, "UTF-8" );
-		}
-		catch (UnsupportedEncodingException e)
-		{
-			log.error( e.getMessage() );
-		}
-		if ( f != null && !f.isEmpty() )
+        f = URLDecoder.decode( f, StandardCharsets.UTF_8);
+        if ( f != null && !f.isEmpty() )
 		{
 			for ( String filterChunk : f.split( ";" ) )
 			{
@@ -291,12 +284,12 @@ public final class VocabularyUtils
 		return cvResult;
 	}
 
-	public static String generateUri( String uri, Boolean isVersionUri, Vocabulary vocabulary )
+	public static String generateUri(String uri, Vocabulary vocabulary )
 	{
 		return generateUri( uri, null, vocabulary.getNotation(), null, vocabulary.getSourceLanguage(), null, null );
 	}
 
-	public static String generateUri( String uri, Boolean isVersionUri, Vocabulary vocabulary, Version version, Concept concept )
+	public static String generateUri(String uri, Vocabulary vocabulary, Version version, Concept concept )
 	{
 		if ( concept == null )
 			return generateUri( uri, true, vocabulary.getNotation(), version.getNumber(),
@@ -306,7 +299,7 @@ public final class VocabularyUtils
 					vocabulary.getSourceLanguage(), concept.getNotation(), concept.getId() );
 	}
 
-	public static String generateUri( String uri, Boolean isVersionUri, VersionDTO version, ConceptDTO concept )
+	public static String generateUri(String uri, VersionDTO version, ConceptDTO concept )
 	{
 		if ( concept == null )
 			return generateUri( uri, true, version.getNotation(), version.getNumber(), version.getLanguage(), null, null );
